# legacy-sipXlang-nl

./: configure.ac  sipxecs-lang-nl.spec.in  sipxlang-nl.spec.in
sipxpbx/: sipxplugin.beans.xml
sipxpbx/WEB-INF/: LoginPage_nl.properties  sipXconfig-web_nl.properties
sipxpbx/WEB-INF/acd/: AcdAgentPresencePanel_nl.properties  AcdAgentsPanel_nl.properties  AcdAgentsStatsPanel_nl.properties  AcdCallsStatsPanel_nl.properties  AcdHistoryPage_nl.properties  AcdLinesPanel_nl.properties  AcdPresenceServer_nl.properties  AcdQueueSelector_nl.properties  AcdQueuesPanel_nl.properties  AcdQueuesStatsPanel_nl.properties  AcdSelectServerPanel_nl.properties  AcdServerPage_nl.properties  AcdServersPanel_nl.properties  AcdSupervisorConsole_nl.properties  AddAcdAgent_nl.properties  EditAcdAgent_nl.properties  EditAcdLine_nl.properties  EditAcdQueue_nl.properties  ListAcdServers_nl.properties
sipxpbx/WEB-INF/admin/: BackupPage_nl.properties  BulkImport_nl.properties  ConfirmUpdateRegion_nl.properties  EditCallGroup_nl.properties  EditPagingGroupPage_nl.properties  EditParkOrbitDefaults_nl.properties  EditParkOrbit_nl.properties  (+19 more)
sipxpbx/acd/: sipxacd-queue_nl.properties
sipxpbx/commserver/: server_nl.properties  siptrunk_nl.properties  user-settings_nl.properties
sipxpbx/linksysPhone/: line_nl.properties
sipxpbx/nortel/: line_nl.properties  phone_nl.properties
sipxpbx/nt1535/: phone_nl.properties
sipxpbx/polycom/: phone_nl.properties
sipxpbx/sipxpark/: park-orbit_nl.properties
sipxpbx/snom/: phone_nl.properties
stdprompts/.svn/: all-wcprops  entries
(+455 files in other folders)
