AC_PREREQ(2.57)
AC_INIT(sipxlang-nl, 14.10, sipx-dev@list.sipfoundry.org)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([sipxpbx/sipxplugin.beans.xml])
AM_INIT_AUTOMAKE(foreign tar-ustar)
m4_include([config/sipXlib2.m4])
AC_SUBST(LANG_ID, nl)
AC_CONFIG_FILES([
  Makefile
  sipxlang-nl.spec
])
AC_OUTPUT
